解决电梯分布地图卡顿的问题

--- a/qualitycloud/build.gradle
+++ b/qualitycloud/build.gradle
@@ -45,4 +45,12 @@ dependencies {
     compile 'com.android.support:support-v4:21.0.3'
     compile files('libs/BaiduLBS_Android.jar')
     compile files('libs/locSDK_6.12.jar')
+
+    compile 'io.reactivex:rxjava:1.1.6'
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.apkfuns.logutils:library:1.4.2'
 }
