--- a/qualitycloud/src/main/AndroidManifest.xml
+++ b/qualitycloud/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.midian.qualitycloud"
     xmlns:tools="http://schemas.android.com/tools"
-    android:versionCode="32"
-    android:versionName="1.2.5" >
+    android:versionCode="33"
+    android:versionName="1.2.6" >
 
     <uses-sdk
         android:minSdkVersion="17"
@@ -234,6 +234,11 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" >
         </activity>
+        <activity
+            android:name="com.midian.qualitycloud.ui.main.ElevatorMap"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name="com.midian.qualitycloud.WelActivity"
             android:launchMode="singleTop"
